# windoopi

./: .gitignore  CMakeLists.txt  checktemp  test.cpp
Testing/src/: patest_playwave.cpp  patest_record.cpp
etc/systemd/system/: checktemp.service  windoo.service
include/: FFTEngine.hpp  FFTRealDouble.hpp  FFTRealDouble_Mixed.hpp  FFTRealFloat.hpp  FFTRealFloat_Mixed.hpp  PAEngine.hpp  WPiCURL.hpp  WpiEngine.hpp  fftengine.hpp  paengine.hpp  patestengine.hpp  wpiengine.hpp
src/: FFTEngine.cpp  FFTRealDouble.cpp  PAEngine.cpp  PAEngineDevs.cpp  ToolWaveAnalysis.cpp  ToolWaveAnalysis.java  WPiAnalysis.cpp  WPiCURL.cpp  WPiEngine.cpp  WPiSerial.cpp  fftengine.cpp  main.cpp  pa_devs.cpp  pa_play.cpp  pa_playwave.cpp  pa_record.cpp  pa_sine.cpp  paengine.cpp  paengine_devs.cpp  paex_record.c  paex_record.cpp  paex_sine.c  paex_sine.cpp  patest_play.cpp  wpiengine.cpp
